@@ -420,12 +420,16 @@ upgrade.caption.upgradefailed=The upgrade has failed.  Please see below and chec
 upgrade.error.notrequired=No upgrade is currently required.
 upgrade.error.oldversion=Upgrading to version {0} from versions older than {1} is not supported.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
+upload.caption.destination=Destination Filename
 upload.caption.filedescription=File Description
+upload.caption.source=Source File
 upload.error.directorycreate=Unable to create upload directory {0}.
 upload.error.filename=Invalid filename.
 upload.error.filenotfound=No file found in upload.
+upload.error.filerename=Unable to rename uploaded file to {0}.
 upload.error.filetype=Administrative settings for this site do not allowed uploads for files of type "{0}".
 upload.error.nodirectory=Uploads not supported, no valid directory to upload into.
+upload.help.destination=This field is optional and allows a name other than the source filename to be used for the uploaded file.  Note that filenames should always be given extensions (for example: ".jpg" or ".txt").
 upload.title=File Upload
 usermenu.account=Account
 usermenu.admin=Admin
