@@ -378,6 +378,7 @@ upgrade.error.notrequired=Opgradering er ikke p\u00E5kr\u00E6vet.
 upgrade.error.oldversion=Opgradering til version {0} fra versioner \u00E6ldre end {1} er ikke supporteret.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=Fil beskrivelse
+upload.caption.source=Kilde fil
 upload.error.directorycreate=Kan ikke oprette folder {0}.
 upload.error.filename=Ugyldigt filnavn.
 upload.error.filenotfound=Ingen fil fundet til overf\u00F8rsel.
