@@ -421,6 +421,7 @@ upgrade.error.notrequired=Zur Zeit ist kein Upgrade erforderlich.
 upgrade.error.oldversion=Upgrades auf Version {0}, von Versionen \u00E4lter als {1}, werden nicht unterst\u00FCtzt.
 upgrade.title=Upgrade von JAMWiki {0} auf JAMWiki {1}
 upload.caption.filedescription=Dateibeschreibung
+upload.caption.source=Quelltextdatei
 upload.error.directorycreate=Kann den Ordner {0} zum Hochladen nicht erstellen.
 upload.error.filename=Ung\u00FCltiger Dateiname
 upload.error.filenotfound=Keine Datei zum Hochladen gefunden
