@@ -402,6 +402,7 @@ upgrade.error.notrequired=No se necesita actualizar la versi\u00F3n.
 upgrade.error.oldversion=No se puede actualizar a la versi\u00F3n {0} desde versiones anteriores a la {1}.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=Descripci\u00F3n del fichero
+upload.caption.source=Fichero fuente
 upload.error.directorycreate=Incapaz de crear directorio para subidas {0}.
 upload.error.filename=Nombre de fichero no v\u00E1lido.
 upload.error.filenotfound=No se ha encontrado el fichero.
