@@ -357,6 +357,7 @@ upgrade.error.notrequired=No upgrade is currently required.
 upgrade.error.oldversion=Upgrading to version {0} from versions older than {1} is not supported.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=File Description
+upload.caption.source=Source File
 upload.error.directorycreate=Unable to create upload directory {0}.
 upload.error.filename=Invalid filename.
 upload.error.filenotfound=No file found in upload.
