@@ -401,6 +401,7 @@ upgrade.error.notrequired=\u73FE\u5728\u30A2\u30C3\u30D7\u30B0\u30EC\u30FC\u30C9
 upgrade.error.oldversion={1} \u4EE5\u524D\u306E\u30D0\u30FC\u30B8\u30E7\u30F3\u304B\u3089\u30D0\u30FC\u30B8\u30E7\u30F3{1}\u3078\u306E\u30A2\u30C3\u30D7\u30B0\u30EC\u30FC\u30C9\u306F\u30B5\u30DD\u30FC\u30C8\u3057\u3066\u3044\u307E\u305B\u3093\u3002
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=\u30D5\u30A1\u30A4\u30EB\u306E\u8AAC\u660E
+upload.caption.source=\u30A4\u30F3\u30DD\u30FC\u30C8\u5143\u30D5\u30A1\u30A4\u30EB
 upload.error.directorycreate=\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u4F5C\u6210\u3067\u304D\u307E\u305B\u3093 {0}\u3002
 upload.error.filename=\u7121\u52B9\u306A\u30D5\u30A1\u30A4\u30EB\u540D\u3002
 upload.error.filenotfound=\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u3059\u308B\u30D5\u30A1\u30A4\u30EB\u304C\u898B\u5F53\u305F\u308A\u307E\u305B\u3093\u3002
