@@ -356,6 +356,7 @@ upgrade.error.notrequired=No upgrade is currently required.
 upgrade.error.oldversion=Upgrading to version {0} from versions older than {1} is not supported.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=\u041E\u043F\u0438\u0441 \u0444\u0430\u0439\u043B\u0443
+upload.caption.source=\u0424\u0430\u0439\u043B-\u0434\u0436\u0435\u0440\u0435\u043B\u043E
 upload.error.directorycreate=Unable to create upload directory {0}.
 upload.error.filename=\u041D\u0435\u0432\u0456\u0440\u043D\u0430 \u043D\u0430\u0437\u0432\u0430 \u0444\u0430\u0439\u043B\u0443.
 upload.error.filenotfound=No file found in upload.
