@@ -401,6 +401,7 @@ upgrade.error.notrequired=\u5F53\u524D\u7248\u672C\u5FC5\u987B\u7684\u6587\u4EF6
 upgrade.error.oldversion=\u4E0D\u652F\u6301\u4ECE\u7248\u672C {1} \u5347\u7EA7\u5230 {0} \u3002
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=\u6587\u4EF6\u63CF\u8FF0
+upload.caption.source=\u539F\u6587\u4EF6
 upload.error.directorycreate=\u4E0D\u80FD\u521B\u5EFA\u4E0A\u4F20\u76EE\u5F55 {0}\u3002
 upload.error.filename=\u65E0\u6548\u7684\u6587\u4EF6\u540D\u3002
 upload.error.filenotfound=\u6CA1\u6709\u4E0A\u4F20\u6587\u4EF6\u3002
