@@ -29,9 +29,14 @@
 <form name="form1" method="post" action="<jamwiki:link value="Special:Upload" />" enctype="multipart/form-data">
 <table border="0">
 <tr>
-	<td><label for="uploadSource"><fmt:message key="import.caption.source" /></label>:</td>
+	<td><label for="uploadSource"><fmt:message key="upload.caption.source" /></label>:</td>
 	<td><input type="file" name="contents" size="50" id="uploadSource" /></td>
 </tr>
+<tr>
+	<td><label for="uploadDestination"><fmt:message key="upload.caption.destination" /></label>:</td>
+	<td><input type="text" name="destination" size="50" id="uploadDestination" /></td>
+</tr>
+<tr><td colspan="2"><div class="formhelp"><fmt:message key="upload.help.destination" /></div></td></tr>
 <tr>
 	<td><label for="uploadDescription"><fmt:message key="upload.caption.filedescription" /></label>:</td>
 	<td><textarea name="description" rows="6" cols="80" id="uploadDescription"><c:out value="${contents}" escapeXml="true" /></textarea></td>
